@@ -18,8 +18,8 @@ class cotisationActions extends sfActions
      */
     public function executeIndex(sfWebRequest $request)
     {
-        $this->cotisation_list = CotisationPeer::doSelectJoinMembreId($this->getUser()->getAttribute('association_id', null, 'user'));
-        $this->typesExist = CotisationTypePeer::doesOneTypeExist($this->getUser()->getAttribute('association_id', null, 'user'));
+        $this->cotisation_list = CotisationPeer::doSelectJoinMembreId($this->getUser()->getAssociationId());
+        $this->typesExist = CotisationTypePeer::doesOneTypeExist($this->getUser()->getAssociationId());
     }
 
     /**
@@ -31,25 +31,39 @@ class cotisationActions extends sfActions
     {
         $this->cotisation = CotisationPeer::retrieveByPk($request->getParameter('id'));
 
-        if ($this->cotisation->getCotisationType()->getAssociationId() == $this->getUser()->getAttribute('association_id', null, 'user')) {
+        if ($this->cotisation->getCotisationType()->getAssociationId() == $this->getUser()->getAssociationId())
+        {
             $this->forward404Unless($this->cotisation);
         }
-        else {
+        else
+        {
             $this->forward('error', 'credentials');
         }
     }
 
+    /**
+     * Display the form to register a new cotisation
+     *
+     * @param 	sfWebRequest	$request
+     */
     public function executeNew(sfWebRequest $request)
     {
         $this->form = new CotisationForm();
-        $this->form->setDefault('mis_a_jour_par', $this->getUser()->getAttribute('user_id', null, 'user'));
+        $this->form->setDefault('enregistre_par', $this->getUser()->getUserId());
+        $this->form->setDefault('association_id', $this->getUser()->getAssociationId());
     }
 
+    /**
+     * Check the creation of a new cotisation.
+     *
+     * @param 	sfWebRequest	$request
+     */
     public function executeCreate(sfWebRequest $request)
     {
         $this->forward404Unless($request->isMethod('post'));
         $this->form = new CotisationForm();
-        $this->form->setDefault('mis_a_jour_par', $this->getUser()->getAttribute('user_id', null, 'user'));
+        $this->form->setDefault('enregistre_par', $this->getUser()->getUserId());
+        $this->form->setDefault('association_id', $this->getUser()->getAssociationId());
         $this->processForm($request, $this->form);
         $this->setTemplate('new');
     }
@@ -64,19 +78,26 @@ class cotisationActions extends sfActions
     {
         $this->forward404Unless($cotisation = CotisationPeer::retrieveByPk($request->getParameter('id')), sprintf('Object cotisation does not exist (%s).', $request->getParameter('id')));
 
-        if ($cotisation->getCotisationType()->getAssociationId() != $this->getUser()->getAttribute('association_id', null, 'user')) {
+        if ($cotisation->getCotisationType()->getAssociationId() != $this->getUser()->getAssociationId())
+        {
             $this->forward('error', 'credentials');
         }
 
         $this->form = new CotisationForm($cotisation);
-        $this->form->setDefault('mis_a_jour_par', $this->getUser()->getAttribute('user_id', null, 'user'));
+        $this->form->setDefault('mis_a_jour_par', $this->getUser()->getUserId());
     }
 
+    /**
+     * Update a cotisation entry with new values
+     *
+     * @param 	sfWebRequest	$request
+     */
     public function executeUpdate(sfWebRequest $request)
     {
         $this->forward404Unless($request->isMethod('post') || $request->isMethod('put'));
         $this->forward404Unless($cotisation = CotisationPeer::retrieveByPk($request->getParameter('id')), sprintf('Object cotisation does not exist (%s).', $request->getParameter('id')));
         $this->form = new CotisationForm($cotisation);
+        $this->form->setDefault('mis_a_jour_par', $this->getUser()->getUserId());
         $this->processForm($request, $this->form);
         $this->setTemplate('edit');
     }
@@ -91,7 +112,8 @@ class cotisationActions extends sfActions
         $request->checkCSRFProtection();
         $this->forward404Unless($cotisation = CotisationPeer::retrieveByPk($request->getParameter('id')), sprintf('Object cotisation does not exist (%s).', $request->getParameter('id')));
 
-        if ($cotisation->getCotisationType()->getAssociationId() != $this->getUser()->getAttribute('association_id', null, 'user')) {
+        if ($cotisation->getCotisationType()->getAssociationId() != $this->getUser()->getAssociationId())
+        {
             $this->forward('error', 'credentials');
         }
 
@@ -114,10 +136,13 @@ class cotisationActions extends sfActions
             $cotisation = $form->save();
             $this->getUser()->setFlash('notice', 'Cotisation enregistrée avec succès.');
             $data = $request->getParameter('cotisation');
-            if (isset($data['id'])) {
+
+            if (isset($data['id']))
+            {
                 $this->redirect('cotisation/index');
             }
-            else {
+            else
+            {
                 $this->redirect('cotisation/new');
             }
         }
